tenants/tenant-project/s3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustfs
  namespace: jh-project
  labels:
    app: rustfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustfs
  template:
    metadata:
      labels:
        app: rustfs
    spec:
      serviceAccountName: rustfs
      containers:
        - name: rustfs
          image: docker.io/rustfs/rustfs:latest
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          readinessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: rustfs-data-block
              mountPath: /data
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "4Gi"
      volumes:
        - name: rustfs-data-block
          persistentVolumeClaim:
            claimName: rustfs-data-block
